src/test/ui/self/issue-61882-2.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/issue-61882-2.rs:6:14
   |
LL |         Self(&x);
   |         ---- ^^ borrowed value does not live long enough
   |         |
   |         type annotation requires that `x` is borrowed for `'static`
LL |
LL |     }
   |     - `x` dropped here while still borrowed
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/issue-61882-2.rs:6:9
   |
LL |         Self(&x);
   |         ^^^^
   = help: consider replacing `Self` with `A<&u8>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
